Updated endpoint functions
